--- a/index-pages.html
+++ b/index-pages.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widgets</title>
+    <title>Pages</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
-<body class="bg-slate-100 dark:bg-slate-900">
+<body class="bg-white dark:bg-slate-900">
 
     <!--Page Title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400 ">OVERVIEW</h1>
@@ -43,90 +42,147 @@
         </div>
       </div>
 
-<script>
- // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-const themeHandler = () => {
-if (localStorage.theme === 'dark' ||
-(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-  document.documentElement.classList.add('dark')
-} else {
-  document.documentElement.classList.remove('dark')
-}
-
-// Whenever the user explicitly chooses light mode
-localStorage.theme = 'light'
-
-// Whenever the user explicitly chooses dark mode
-localStorage.theme = 'dark'
-}
-
-</script>
 
 
 
+<!--Theme modal window-->
 
+    <!--Styles for theme modal-->
+    <style>
+		.animated {
+			-webkit-animation-duration: 1s;
+			animation-duration: 1s;
+			-webkit-animation-fill-mode: both;
+			animation-fill-mode: both;
+		}
+
+		.animated.faster {
+			-webkit-animation-duration: 500ms;
+			animation-duration: 500ms;
+		}
+
+		.fadeIn {
+			-webkit-animation-name: fadeIn;
+			animation-name: fadeIn;
+		}
+
+		.fadeOut {
+			-webkit-animation-name: fadeOut;
+			animation-name: fadeOut;
+		}
+
+		@keyframes fadeIn {
+			from {
+				opacity: 0;
+			}
+			to {
+				opacity: 1;
+			}
+		}
+
+		@keyframes fadeOut {
+			from {
+				opacity: 1;
+			}
+			to {
+				opacity: 0;
+			}
+		}
+	</style>
+
+    <!--Modal-->
+	<div class="bottom main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
+		style="background: rgba(0,0,0,.6);">
+		<div
+			class="border border-slate-700 modal-container bg-slate-200 dark:bg-slate-800 w-11/12 md:max-w-md mx-auto rounded-xl shadow-lg z-50 overflow-y-auto">
+			<div class="modal-content py-4 text-left px-6 bottom-4">
+				<!--Title-->
+				<div class="flex justify-between items-center pb-3 border-b dark:border-gray-600">
+					<p class="text-2xl font-bold text-black dark:text-white">Theme</p>
+					<div class="modal-close cursor-pointer z-50">
+						<svg class="fill-current text-black dark:text-gray-600" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+							viewBox="0 0 18 18">
+							<path
+								d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
+							</path>
+						</svg>
+					</div>
+				</div>
+				    <!-- Modal body -->
+                    <div class="p-6 grid grid-cols-2">
+                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Ligth</button>
+                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Dark</button>
+                    </div>
+			</div>
+		</div>
+	</div>
+
+    <!--Script for modal window-->
+	<script>
+
+		const modal = document.querySelector('.main-modal');
+		const closeButton = document.querySelectorAll('.modal-close');
+
+		const modalClose = () => {
+			modal.classList.remove('fadeIn');
+			modal.classList.add('fadeOut');
+			setTimeout(() => {
+				modal.style.display = 'none';
+			}, 500);
+		}
+
+		const openModal = () => {
+			modal.classList.remove('fadeOut');
+			modal.classList.add('fadeIn');
+			modal.style.display = 'flex';
+		}
+
+		for (let i = 0; i < closeButton.length; i++) {
+			const elements = closeButton[i];
+			elements.onclick = (e) => modalClose();
+			modal.style.display = 'none';
+			window.onclick = function (event) {
+				if (event.target == modal) modalClose();
+			}
+		}
+	
+    </script>
+
+
+
+
+    <!--Footer Navigation Bar-->
+    <div class="w-full h-screen">
+        <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+            <div id="tabs" class="flex justify-between">
+                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="extension-puzzle"></ion-icon>
+                    <span class="tab tab-explore block text-xs">Wigets</span>
+                </a>
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="book"></ion-icon>
+                    <span class="tab tab-kategori block text-xs">Pages</span>
+                </a>
+                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="home"></ion-icon>
+                    <span class="tab tab-explore block text-xs">Home</span>
+                </a>
+                <a href="#" onclick="openModal()"
+                class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="contrast-sharp"></ion-icon>
+                    <span class="tab tab-wishlist block text-xs">Theme</span>
+                </a>
+                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="search"></ion-icon>
+                    <span class="tab tab-account block text-xs">Search</span>
+                </a>
+            </div>
+        </section>
+    </div>
   
-  <!-- Main modal -->
-  <div id="themeSettings" tabindex="-1" aria-hidden="true" class="fixed z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto bottom-4">
-      <div class="relative w-full h-full ">
-          <!-- Modal content -->
-          <div class="relative bg-slate-100 rounded-xl shadow-lg dark:bg-slate-800">
-              <!-- Modal header -->
-              <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
-                  <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">
-                      Theme
-                  </h3>
-                  <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-xl text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="themeSettings">
-                      <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                      <span class="sr-only">Close modal</span>
-                  </button>
-              </div>
-              <!-- Modal body -->
-              <div class="p-6 grid grid-cols-2">
-                <button type="button" onclick={themeHandler()} class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Ligth</button>
-                <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Dark</button>
-                <div>
-                
-                </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
-<!--Footer Navigation Bar-->
-<div class="w-full h-screen">
-    <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
-    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
-        <div id="tabs" class="flex justify-between">
-            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="extension-puzzle"></ion-icon>
-                <span class="tab tab-explore block text-xs">Wigets</span>
-            </a>
-            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="book"></ion-icon>
-                <span class="tab tab-kategori block text-xs">Pages</span>
-            </a>
-            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="home"></ion-icon>
-                <span class="tab tab-explore block text-xs">Home</span>
-            </a>
-            <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings"
-            class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="contrast-sharp"></ion-icon>
-                <span class="tab tab-wishlist block text-xs">Theme</span>
-            </a>
-            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="search"></ion-icon>
-                <span class="tab tab-account block text-xs">Search</span>
-            </a>
-        </div>
-    </section>
-</div>
   
-  
-    <!--Flowbite for modal window-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
-    <!--Ion Icons-->
+    <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
