--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
 </head>
 <body class="bg-slate-100 dark:bg-slate-900">
 
-    <!--PAGE TITLE-->
+    <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Home</h1>
 
-    <!--CARD#1-->
+    <!--Card-->
     <div class="rounded-xl overflow-hidden shadow-lg mr-4 ml-4 mt-5">
+        <img class="w-full" src="https://images.unsplash.com/photo-1613297595539-0d36a37702c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"> 
+        <!--
         <video class="w-full" muted autoplay="autoplay" loop="loop"
         src="images/infinite-card-bg.mp4"
         alt="Sunset in the mountains"></video>
+        ...
+        for video card
+        -->
         <div class="px-6 py-4 bg-slate-200 dark:bg-slate-800 dark:border-gray-700">
             <h1 class="font-bold text-xl mb-2 dark:text-white">Card Title</h1>
             <p class="text-gray-700 text-base dark:text-gray-400">
@@ -33,25 +37,25 @@
         </div>
         </div>
   
-        <!--OUR PROJECTS-->
-<div class="columns-2 mx-4 mt-5">
-        <div class="gap-8 relative ">
-        <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
-            <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                View
-            </button>
-        </div>
+    <!--Card-->
+    <div class="columns-2 mx-4 mt-5">
+            <div class="gap-8 relative ">
+            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" />
+                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                    View
+                </button>
+            </div>
 
-        <div class="gap-8 relative ">
-        <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
-            <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
-                View
-            </button>
-        </div>
-</div>
+            <div class="gap-8 relative ">
+            <img class="w-full rounded-xl insent-0 h-full object-cover opacity-50 shadow-lg" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
+                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 mx-4 rounded-full absolute inset-x-0 bottom-2">
+                    View
+                </button>
+            </div>
+    </div>
         
 
-    <!--CARD#2-->
+    <!--Card#2-->
     <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mr-4 ml-4 mt-5">
         <div class="p-5">
             <h5 class="mb-1 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Our Service</h5>
@@ -63,7 +67,7 @@
         </div>
     </div>
 
-
+    <!--Service card-->
     <div class="p-5">
         <div class="bg-slate-800 p-6 rounded-xl shadow-lg">
           <h2 class="text-4xl font-extrabold mb-2 text-white text-center border-b rounded-t dark:border-gray-600">Our Service</h2>
@@ -87,7 +91,112 @@
         </div>
       </div>
 
-    <!--FOOTER-->
+
+<!--Theme modal window-->
+
+    <!--Styles for theme modal-->
+    <style>
+		.animated {
+			-webkit-animation-duration: 1s;
+			animation-duration: 1s;
+			-webkit-animation-fill-mode: both;
+			animation-fill-mode: both;
+		}
+
+		.animated.faster {
+			-webkit-animation-duration: 500ms;
+			animation-duration: 500ms;
+		}
+
+		.fadeIn {
+			-webkit-animation-name: fadeIn;
+			animation-name: fadeIn;
+		}
+
+		.fadeOut {
+			-webkit-animation-name: fadeOut;
+			animation-name: fadeOut;
+		}
+
+		@keyframes fadeIn {
+			from {
+				opacity: 0;
+			}
+			to {
+				opacity: 1;
+			}
+		}
+
+		@keyframes fadeOut {
+			from {
+				opacity: 1;
+			}
+			to {
+				opacity: 0;
+			}
+		}
+	</style>
+
+    <!--Modal-->
+	<div class="bottom main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
+		style="background: rgba(0,0,0,.6);">
+		<div
+			class="border border-slate-700 modal-container bg-slate-200 dark:bg-slate-800 w-11/12 md:max-w-md mx-auto rounded-xl shadow-lg z-50 overflow-y-auto">
+			<div class="modal-content py-4 text-left px-6 bottom-4">
+				<!--Title-->
+				<div class="flex justify-between items-center pb-3 border-b dark:border-gray-600">
+					<p class="text-2xl font-bold text-black dark:text-white">Theme</p>
+					<div class="modal-close cursor-pointer z-50">
+						<svg class="fill-current text-black dark:text-gray-600" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+							viewBox="0 0 18 18">
+							<path
+								d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
+							</path>
+						</svg>
+					</div>
+				</div>
+				    <!-- Modal body -->
+                    <div class="p-6 grid grid-cols-2">
+                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Ligth</button>
+                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Dark</button>
+                    </div>
+			</div>
+		</div>
+	</div>
+
+    <!--Script for modal window-->
+	<script>
+
+		const modal = document.querySelector('.main-modal');
+		const closeButton = document.querySelectorAll('.modal-close');
+
+		const modalClose = () => {
+			modal.classList.remove('fadeIn');
+			modal.classList.add('fadeOut');
+			setTimeout(() => {
+				modal.style.display = 'none';
+			}, 500);
+		}
+
+		const openModal = () => {
+			modal.classList.remove('fadeOut');
+			modal.classList.add('fadeIn');
+			modal.style.display = 'flex';
+		}
+
+		for (let i = 0; i < closeButton.length; i++) {
+			const elements = closeButton[i];
+			elements.onclick = (e) => modalClose();
+			modal.style.display = 'none';
+			window.onclick = function (event) {
+				if (event.target == modal) modalClose();
+			}
+		}
+	
+    </script>
+
+
+    <!--Footer-->
     <footer class="p-4 my-5 mx-4 rounded-xl shadow-lg md:flex md:items-center md:justify-between md:p-6 bg-slate-100 dark:bg-slate-800">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="#" class="hover:underline">NotExistedCompany</a>. All Rights Reserved.
         </span>
@@ -107,64 +216,39 @@
         </ul>
     </footer>
 
-     <!-- Main modal -->
-  <div id="themeSettings" tabindex="-1" aria-hidden="true" class="fixed z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto bottom-4">
-    <div class="relative w-full h-full ">
-        <!-- Modal content -->
-        <div class="relative bg-slate-100 rounded-xl shadow-lg dark:bg-slate-800">
-            <!-- Modal header -->
-            <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
-                <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">
-                    Theme
-                </h3>
-                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-xl text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="themeSettings">
-                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
+    <!--Footer Navigation Bar-->
+    <div class="w-full h-screen">0
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+            <div id="tabs" class="flex justify-between">
+                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="extension-puzzle"></ion-icon>
+                    <span class="tab tab-wigets block text-xs">Wigets</span>
+                </a>
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="book"></ion-icon>
+                    <span class="tab tab-pages block text-xs">Pages</span>
+                </a>
+                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="home"></ion-icon>
+                    <span class="tab tab-home block text-xs">Home</span>
+                </a>
+                <a href="#" onclick="openModal()"
+                class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="contrast-sharp"></ion-icon>
+                    <span class="tab tab-theme block text-xs">Theme</span>
+                </a>
+                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                    <ion-icon name="search"></ion-icon>
+                    <span class="tab tab-search block text-xs">Search</span>
+                </a>
             </div>
-            <!-- Modal body -->
-            <div class="p-6 grid grid-cols-2">
-              <button type="button" onclick={themeHandler()} class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Ligth</button>
-              <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Dark</button>
-            </div>
-        </div>
+        </section>
     </div>
-</div>
-
-<!--Footer Navigation Bar-->
-<div class="w-full h-screen">
-    <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
-    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
-        <div id="tabs" class="flex justify-between">
-            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="extension-puzzle"></ion-icon>
-                <span class="tab tab-wigets block text-xs">Wigets</span>
-            </a>
-            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="book"></ion-icon>
-                <span class="tab tab-pages block text-xs">Pages</span>
-            </a>
-            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="home"></ion-icon>
-                <span class="tab tab-home block text-xs">Home</span>
-            </a>
-            <a href="#themeSettings" data-modal-target="themeSettings" data-modal-toggle="themeSettings"
-            class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="contrast-sharp"></ion-icon>
-                <span class="tab tab-theme block text-xs">Theme</span>
-            </a>
-            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                <ion-icon name="search"></ion-icon>
-                <span class="tab tab-search block text-xs">Search</span>
-            </a>
-        </div>
-    </section>
-</div>
 
 
 
-<!--Flowbite for modal window-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>\
+
+
 <!--IONICONS-->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
