--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--Card-->
     <div class="rounded-xl overflow-hidden shadow-lg mr-4 ml-4 mt-5">
-        <img class="w-full" src="https://images.unsplash.com/photo-1613297595539-0d36a37702c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"> 
+        <img class="w-full" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80"> 
         <!--
         <video class="w-full" muted autoplay="autoplay" loop="loop"
         src="images/infinite-card-bg.mp4"
@@ -217,7 +217,7 @@
     </footer>
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">0
+    <div class="w-full h-screen">
         <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
